[gd_scene load_steps=2 format=3 uid="uid://kb7a4xc26bly"]

[ext_resource type="Script" path="res://Data/scripts/hurt_box.gd" id="1_fk4mb"]

[node name="hurt_box" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fk4mb")

[node name="collision" type="CollisionShape2D" parent="."]
debug_color = Color(0.784314, 0.388235, 0.521569, 0.419608)

[node name="disableTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="disableTimer" to="." method="_on_disable_timer_timeout"]
